crates/config/tests/snapshots/block_string_gen_literal_strip_simple_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-strip-simple-dedent

## Input

```mical
key |-
  a
  b
end marker

```

## JSON

```json
{
  "key": "a\nb",
  "end": "marker"
}
```

vim:ft=markdown
