crates/config/tests/snapshots/block_string_gen_literal_strip_simple_eof.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-strip-simple-eof

## Input

```mical
key |-
  a
  b

```

## JSON

```json
{
  "key": "a\nb"
}
```

vim:ft=markdown
