crates/config/tests/snapshots/block_string_gen_literal_strip_trailing_empty_dedent.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-gen-literal-strip-trailing-empty-dedent

## Input

```mical
key |-
  a


end marker

```

## JSON

```json
{
  "key": "a",
  "end": "marker"
}
```

vim:ft=markdown
