crates/config/tests/snapshots/block_string_header_comment.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-header-comment

## Input

```mical
f | # comment
  content

```

## JSON

```json
{
  "f": "content\n"
}
```

vim:ft=markdown
