crates/config/tests/snapshots/block_string_header_fallbacks.snap
---
source: crates/config/tests/snapshots.rs
---
# block-string-header-fallbacks

## Input

```mical
a |not block
b >not fold
c |+not block
d |abc
e |-2

```

## JSON

```json
{
  "a": "|not block",
  "b": ">not fold",
  "c": "|+not block",
  "d": "|abc",
  "e": "|-2"
}
```

vim:ft=markdown
